Added some details to the website

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@ h3 {
     padding: 0;
 }
 
+#intro-name {
+    font-size: clamp(40px, 8vw, 80px);
+    color: snow;
+}
+
+
 ul{
     margin: 0;
     padding: 0;
@@ -47,7 +53,12 @@ ul{
     border: 2px solid blue;
     display: flex;
     flex-direction: row;
+}
 
+.center-pane {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .side-pane {
@@ -56,6 +67,14 @@ ul{
     justify-content: end;
     width: 10%;
     border: 2px solid yellow;
+}
+
+.link-button {
+    display: flex;
+    justify-content: center;
+    padding-top: 25%;
+    padding-bottom: 25%;
+    border: 2px orange solid;
 }
 
 #links {
