--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,62 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    font-family: 'DIN Condensed', sans-serif;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "DIN Condensed", sans-serif;
 }
 
-h1, 
-h2,
-h3 {
-    margin: 0;
-    padding: 0;
+.navbar {
+  background-color: black;
+  height: 100px;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
 }
 
-#intro-name {
-    font-size: clamp(40px, 8vw, 80px);
-    color: snow;
+.navbar_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 50px;
 }
 
-
-ul{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+#navbar_logo {
+  background-color: aqua;
+  background-image: linear-gradient(to top, green 0%, pink 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 2rem;
 }
 
-.nav-container {
-    border: 2px solid red;
-    padding: 0 10% 0 10%;
+.navbar_menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  text-align: center;
 }
 
-#nav-menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
+.navbar_item {
+  height: 80px;
 }
 
-#nav-menu > li > a {
-    text-decoration: none;
-    color: white;
+.navbar_link {
+  color: snow;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  height: 100%;
 }
 
-#nav-menu > li {
-    padding: 0 5px 0 5px;
-}
-
-.main-container {
-    border: 2px solid blue;
-    display: flex;
-    flex-direction: row;
-}
-
-.center-pane {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-.side-pane {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    width: 10%;
-    border: 2px solid yellow;
-}
-
-.link-button {
-    display: flex;
-    justify-content: center;
-    padding-top: 25%;
-    padding-bottom: 25%;
-    border: 2px orange solid;
-}
-
-#links {
-    border: 2px solid purple;
-}
-
-#links > li {
-    padding: 12px;
-}
-
-.main-section {
-    border: 2px solid green;
-    color: blue;
-}
-
-#home {
-    text-decoration: none;
-    color: white;
+.navbar_link:hover {
+  color: yellow;
+  transition: all 0.3s ease;
 }
