--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,76 @@
+/* CSS Reset */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+/* Default values that all children will inherit*/
+html {
+  font-size: 16px;
   font-family: "DIN Condensed", sans-serif;
+  color: black;
 }
 
-.navbar {
-  background-color: black;
-  height: 100px;
-  font-size: 1.2rem;
-  display: flex;
-  justify-content: center;
-}
-
-.navbar_container {
-  display: flex;
-  justify-content: space-between;
+body {
   width: 100%;
-  margin: 0 auto;
-  padding: 0 50px;
+  max-width: 1200px;
+  min-height: 100vh;
+  border: 2px dashed red;
 }
 
-#navbar_logo {
-  background-color: aqua;
-  background-image: linear-gradient(to top, green 0%, pink 100%);
-  background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  font-size: 2rem;
-}
-
-.navbar_menu {
-  display: flex;
-  align-items: center;
+ul {
   list-style: none;
-  text-align: center;
 }
 
-.navbar_item {
-  height: 80px;
-}
-
-.navbar_link {
-  color: snow;
+li,
+a {
   text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 1rem;
-  height: 100%;
+  text-decoration-line: none;
 }
 
-.navbar_link:hover {
-  color: yellow;
-  transition: all 0.3s ease;
+.main-overlay_container {
+  width: 100%;
+  position: fixed;
+  padding: 0 6rem;
+}
+
+.menu-pane {
+  width: 50%;
+  height: 100vh;
+  padding: 6rem 0;
+}
+
+.main-flex_container {
+  display: flex;
+  flex-direction: row;
+  padding: 0 6rem;
+}
+
+.flex-pane {
+  min-height: 100vh;
+  width: 50%;
+  max-width: 600px;
+  border: 2px solid blue;
+  padding: 6rem 0;
+}
+
+/* Mobile devices */
+@media screen and (max-width: 480px) {
+  .main_container {
+    padding: 3rem 1.5rem;
+    flex-direction: column;
+  }
+
+  .left-pane {
+    width: inherit;
+  }
+
+  .right-pane {
+    width: inherit;
+  }
+}
+
+.intro-par {
+  margin-bottom: 5px;
 }
