--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1450px;
   min-height: 100vh;
   border: 2px dashed red;
 }
@@ -29,44 +29,74 @@ a {
   text-decoration-line: none;
 }
 
-.main-overlay_container {
-  width: 100%;
-  position: fixed;
+.main-container {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
   padding: 0 6rem;
 }
 
 .menu-pane {
   width: 50%;
+  max-width: 500px;
   height: 100vh;
   padding: 6rem 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
-.main-flex_container {
-  display: flex;
-  flex-direction: row;
-  padding: 0 6rem;
-}
-
-.flex-pane {
-  min-height: 100vh;
+.main-pane {
   width: 50%;
-  max-width: 600px;
-  border: 2px solid blue;
+  max-width: 500px;
   padding: 6rem 0;
+}
+
+#name-tag {
+  size: 3rem;
+}
+
+.menu-block {
+  width: fit-content;
+  margin-top: 3rem;
+}
+
+.menu-item {
+  text-decoration: none;
+  color: black;
+}
+
+.menu-item:hover {
+  color: yellow;
+  transform: translate(10px, 0);
+  margin-top: 1rem;
+}
+
+.links-block {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.fa {
+  color: black;
 }
 
 /* Mobile devices */
 @media screen and (max-width: 480px) {
-  .main_container {
+  .main-container {
     padding: 3rem 1.5rem;
     flex-direction: column;
   }
 
-  .left-pane {
+  .menu-pane {
     width: inherit;
+    height: fit-content;
+    padding: 0 0;
+    position: relative;
   }
 
-  .right-pane {
+  .main-pane {
     width: inherit;
   }
 }
