--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@
 /* Default values that all children will inherit*/
 html {
   font-size: 16px;
-  font-family: "DIN Condensed", sans-serif;
-  color: black;
+  font-family: "Zilla Slab", sans-serif;
+  background-color: black;
+  color: white;
 }
 
 body {
@@ -17,16 +18,6 @@ body {
   max-width: 1450px;
   min-height: 100vh;
   border: 2px dashed red;
-}
-
-ul {
-  list-style: none;
-}
-
-li,
-a {
-  text-decoration: none;
-  text-decoration-line: none;
 }
 
 .main-container {
@@ -52,8 +43,19 @@ a {
   padding: 6rem 0;
 }
 
+.intro-block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #name-tag {
-  size: 3rem;
+  align-content: center;
+  text-decoration: none;
+  line-height: 1em;
+  font-size: 4rem;
+  color: white;
+  text-transform: uppercase;
 }
 
 .menu-block {
@@ -61,15 +63,41 @@ a {
   margin-top: 3rem;
 }
 
-.menu-item {
-  text-decoration: none;
-  color: black;
+ul {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.menu-item:hover {
-  color: yellow;
-  transform: translate(10px, 0);
-  margin-top: 1rem;
+ul li {
+  position: relative;
+  list-style: none;
+}
+
+ul li a {
+  position: relative;
+  font-size: 2rem;
+  text-decoration: none;
+  line-height: 1em;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px white;
+}
+
+ul li a::before {
+  content: attr(data-text);
+  position: absolute;
+  color: white;
+  overflow: hidden;
+  width: 0;
+  transition: 1s;
+  border-right: 6px solid white;
+}
+
+ul li a:hover::before {
+  width: 100%;
+  filter: drop-shadow(0 0 25px white);
 }
 
 .links-block {
@@ -79,7 +107,8 @@ a {
 }
 
 .fa {
-  color: black;
+  color: white;
+  text-decoration: none;
 }
 
 /* Mobile devices */
